<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".accountActivity">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_create_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_create_account"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/tv_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/museosans_500"
        android:text="@string/create_acc"
        android:textColor="@color/white"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/top_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="iv_back,tv_create_account"
        app:layout_constraintTop_toBottomOf="@id/iv_back"
        tools:layout_editor_absoluteX="187dp" />


    <TextView
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/museosans_500"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="@+id/et_mail"
        app:layout_constraintStart_toStartOf="@id/left_barrier"
        app:layout_constraintTop_toBottomOf="@id/top_barrier" />

    <EditText
        android:id="@+id/et_mail"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="@+id/et_pass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/left_barrier"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/museosans_500"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="@+id/et_pass"
        app:layout_constraintStart_toStartOf="@id/left_barrier"
        app:layout_constraintTop_toBottomOf="@+id/tv_mailReview" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:hint="See criteria below"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_rep_pass"
        app:layout_constraintStart_toStartOf="@id/left_barrier"
        app:layout_constraintTop_toBottomOf="@+id/tv_pass"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_rep_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/museosans_500"
        android:text="@string/rep_pass"
        android:textColor="@color/white"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="@+id/et_rep_pass"
        app:layout_constraintStart_toStartOf="@id/left_barrier"
        app:layout_constraintTop_toBottomOf="@+id/et_pass" />

    <EditText
        android:id="@+id/et_rep_pass"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_acc_info"
        app:layout_constraintStart_toStartOf="@id/left_barrier"
        app:layout_constraintTop_toBottomOf="@+id/tv_rep_pass"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_pass_info"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:drawablePadding="10dp"
        android:fontFamily="@font/museosans_500"
        android:padding="15dp"
        android:text="@string/pass_wrong"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tv_acc_info"
        app:layout_constraintEnd_toEndOf="@id/tv_acc_info"
        app:layout_constraintStart_toStartOf="@+id/tv_acc_info"
        app:layout_constraintTop_toBottomOf="@+id/et_rep_pass" />

    <TextView
        android:id="@+id/tv_acc_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/museosans_300"
        android:text="@string/acc_info"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintEnd_toEndOf="@id/btn_next"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/left_barrier"
        app:layout_constraintTop_toBottomOf="@+id/tv_pass_info" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/left_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="iv_back"
        app:layout_constraintStart_toEndOf="@id/iv_back"
        tools:layout_editor_absoluteY="40dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/gradient_button_background"
        android:fontFamily="@font/museosans_300"
        android:enabled="false"
        android:text="@string/next"
        android:onClick="displayUsersData"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:outlineAmbientShadowColor="@color/white"
        android:outlineSpotShadowColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/top_barrier" />

    <TextView
        android:id="@+id/tv_mailReview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawablePadding="10dp"
        android:fontFamily="@font/museosans_500"
        android:padding="15dp"
        android:text="@string/email_wrong"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/tv_pass"
        app:layout_constraintEnd_toEndOf="@+id/tv_pass"
        app:layout_constraintStart_toEndOf="@id/left_barrier"
        app:layout_constraintTop_toBottomOf="@id/et_mail" />

</androidx.constraintlayout.widget.ConstraintLayout>